--- a/.gitignore
+++ b/.gitignore
@@ -16,48 +16,48 @@
 10-steel/**/*.showNode1
 10-steel/**/*.VISA3D
 10-steel/**/*.Element
-# **/*.$ET
-# **/*.$og
-# **/*.EV
-# **/*.F1
-# **/*.F9
-# **/*.fun
-# **/*.GUU
-# **/*.H
-# **/*.H1
-# **/*.hsa
-# **/*.hsc
-# **/*.ID
-# **/*.jcj
-# **/*.job
-# **/*.K
-# **/*.K1
-# **/*.K9
-# **/*.LBK
-# **/*.lbl
-# **/*.lbm
-# **/*.lin
-# **/*.LOG
-# **/*.M1
-# **/*.M9
-# **/*.MAS
-# **/*.mod
-# **/*.msh
-# **/*.mtl
-# **/*.npr
-# **/*.OUT
-# **/*.p1m
-# **/*.p9
-# **/*.PAR
-# **/*.rsi
-# **/*.U
-# **/*.U1
-# **/*.V
-# **/*.V1
-# **/*.XMJ
-# **/*.xyz
-# **/*.Y1
-# **/*.Y9
-# **/*.Z1
-# **/*.Z9
+**/*.$ET
+**/*.$og
+**/*.EV
+**/*.F1
+**/*.F9
+**/*.fun
+**/*.GUU
+**/*.H
+**/*.H1
+**/*.hsa
+**/*.hsc
+**/*.ID
+**/*.jcj
+**/*.job
+**/*.K
+**/*.K1
+**/*.K9
+**/*.LBK
+**/*.lbl
+**/*.lbm
+**/*.lin
+**/*.LOG
+**/*.M1
+**/*.M9
+**/*.MAS
+**/*.mod
+**/*.msh
+**/*.mtl
+**/*.npr
+**/*.OUT
+**/*.p1m
+**/*.p9
+**/*.PAR
+**/*.rsi
+**/*.U
+**/*.U1
+**/*.V
+**/*.V1
+**/*.XMJ
+**/*.xyz
+**/*.Y1
+**/*.Y9
+**/*.Z1
+**/*.Z9
 
