--- a/.gitignore
+++ b/.gitignore
@@ -16,49 +16,49 @@
 10-steel/**/*.showNode1
 10-steel/**/*.VISA3D
 10-steel/**/*.Element
-**/*.$ET
-**/*.$og
-**/*.ebk
-**/*.EV
-**/*.F1
-**/*.F9
-**/*.fun
-**/*.GUU
-**/*.H
-**/*.H1
-**/*.hsa
-**/*.hsc
-**/*.ID
-**/*.jcj
-**/*.job
-**/*.K
-**/*.K1
-**/*.K9
-**/*.LBK
-**/*.lbl
-**/*.lbm
-**/*.lin
-**/*.LOG
-**/*.M1
-**/*.M9
-**/*.MAS
-**/*.mod
-**/*.msh
-**/*.mtl
-**/*.npr
-**/*.OUT
-**/*.p1m
-**/*.p9
-**/*.PAR
-**/*.rsi
-**/*.U
-**/*.U1
-**/*.V
-**/*.V1
-**/*.XMJ
-**/*.xyz
-**/*.Y1
-**/*.Y9
-**/*.Z1
-**/*.Z9
+**/ETABS/*.$ET
+**/ETABS/*.$og
+**/ETABS/*.ebk
+**/ETABS/*.EV
+**/ETABS/*.F1
+**/ETABS/*.F9
+**/ETABS/*.fun
+**/ETABS/*.GUU
+**/ETABS/*.H
+**/ETABS/*.H1
+**/ETABS/*.hsa
+**/ETABS/*.hsc
+**/ETABS/*.ID
+**/ETABS/*.jcj
+**/ETABS/*.job
+**/ETABS/*.K
+**/ETABS/*.K1
+**/ETABS/*.K9
+**/ETABS/*.LBK
+**/ETABS/*.lbl
+**/ETABS/*.lbm
+**/ETABS/*.lin
+**/ETABS/*.LOG
+**/ETABS/*.M1
+**/ETABS/*.M9
+**/ETABS/*.MAS
+**/ETABS/*.mod
+**/ETABS/*.msh
+**/ETABS/*.mtl
+**/ETABS/*.npr
+**/ETABS/*.OUT
+**/ETABS/*.p1m
+**/ETABS/*.p9
+**/ETABS/*.PAR
+**/ETABS/*.rsi
+**/ETABS/*.U
+**/ETABS/*.U1
+**/ETABS/*.V
+**/ETABS/*.V1
+**/ETABS/*.XMJ
+**/ETABS/*.xyz
+**/ETABS/*.Y1
+**/ETABS/*.Y9
+**/ETABS/*.Z1
+**/ETABS/*.Z9
 
