--- a/.gitignore
+++ b/.gitignore
@@ -16,49 +16,78 @@
 10-steel/**/*.showNode1
 10-steel/**/*.VISA3D
 10-steel/**/*.Element
-**/ETABS/*.$ET
-**/ETABS/*.$og
-**/ETABS/*.ebk
-**/ETABS/*.EV
-**/ETABS/*.F1
-**/ETABS/*.F9
-**/ETABS/*.fun
-**/ETABS/*.GUU
-**/ETABS/*.H
-**/ETABS/*.H1
-**/ETABS/*.hsa
-**/ETABS/*.hsc
-**/ETABS/*.ID
-**/ETABS/*.jcj
-**/ETABS/*.job
-**/ETABS/*.K
-**/ETABS/*.K1
-**/ETABS/*.K9
-**/ETABS/*.LBK
-**/ETABS/*.lbl
-**/ETABS/*.lbm
-**/ETABS/*.lin
-**/ETABS/*.LOG
-**/ETABS/*.M1
-**/ETABS/*.M9
-**/ETABS/*.MAS
-**/ETABS/*.mod
-**/ETABS/*.msh
-**/ETABS/*.mtl
-**/ETABS/*.npr
-**/ETABS/*.OUT
-**/ETABS/*.p1m
-**/ETABS/*.p9
-**/ETABS/*.PAR
-**/ETABS/*.rsi
-**/ETABS/*.U
-**/ETABS/*.U1
-**/ETABS/*.V
-**/ETABS/*.V1
-**/ETABS/*.XMJ
-**/ETABS/*.xyz
-**/ETABS/*.Y1
-**/ETABS/*.Y9
-**/ETABS/*.Z1
-**/ETABS/*.Z9
+**/ETABS/**/*.$ET
+**/ETABS/**/*.$og
+**/ETABS/**/*.ebk
+**/ETABS/**/*.EV
+**/ETABS/**/*.F1
+**/ETABS/**/*.F9
+**/ETABS/**/*.fun
+**/ETABS/**/*.GUU
+**/ETABS/**/*.H
+**/ETABS/**/*.H1
+**/ETABS/**/*.hsa
+**/ETABS/**/*.hsc
+**/ETABS/**/*.ID
+**/ETABS/**/*.jcj
+**/ETABS/**/*.job
+**/ETABS/**/*.K
+**/ETABS/**/*.K1
+**/ETABS/**/*.K9
+**/ETABS/**/*.LBK
+**/ETABS/**/*.lbl
+**/ETABS/**/*.lbm
+**/ETABS/**/*.lin
+**/ETABS/**/*.LOG
+**/ETABS/**/*.M1
+**/ETABS/**/*.M9
+**/ETABS/**/*.MAS
+**/ETABS/**/*.mod
+**/ETABS/**/*.msh
+**/ETABS/**/*.mtl
+**/ETABS/**/*.npr
+**/ETABS/**/*.OUT
+**/ETABS/**/*.p1m
+**/ETABS/**/*.p9
+**/ETABS/**/*.PAR
+**/ETABS/**/*.rsi
+**/ETABS/**/*.U
+**/ETABS/**/*.U1
+**/ETABS/**/*.V
+**/ETABS/**/*.V1
+**/ETABS/**/*.XMJ
+**/ETABS/**/*.xyz
+**/ETABS/**/*.Y1
+**/ETABS/**/*.Y9
+**/ETABS/**/*.Z1
+**/ETABS/**/*.Z9
+**/ETABS/**/*.CQC
+**/ETABS/**/*.CSE
+**/ETABS/**/*.CSG
+**/ETABS/**/*.csj
+**/ETABS/**/*.csp
+**/ETABS/**/*.F3
+**/ETABS/**/*.F4
+**/ETABS/**/*.K3
+**/ETABS/**/*.K4
+**/ETABS/**/*.L3
+**/ETABS/**/*.LBN
+**/ETABS/**/*.M3
+**/ETABS/**/*.M4
+**/ETABS/**/*.p3
+**/ETABS/**/*.p4
+**/ETABS/**/*.pde
+**/ETABS/**/*.PPD
+**/ETABS/**/*.rsp
+**/ETABS/**/*.sec
+**/ETABS/**/*.sev
+**/ETABS/**/*.shs
+**/ETABS/**/*.T3
+**/ETABS/**/*.T4
+**/ETABS/**/*.W
+**/ETABS/**/*.W1
+**/ETABS/**/*.Y3
+**/ETABS/**/*.Y4
+**/ETABS/**/*.Z3
+**/ETABS/**/*.Z4
 
