--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,13 +31,16 @@
     "yml"
   ],
   "cSpell.words": [
+    "classdef",
     "colorbar",
     "colormap",
     "jacobian",
     "linspace",
+    "matlab",
     "nargin",
     "setdiff",
     "strcmp",
-    "undeformed"
+    "undeformed",
+    "unittest"
   ]
 }
