--- a/.gitignore
+++ b/.gitignore
@@ -98,5 +98,33 @@
 **/ETABS/**/*.Z4
 **/ETABS/**/*.Z11
 **/ETABS/**/*.ico
-
-
+10-pc/dp1/ETABS/REF/0520154gal_2.Y0B
+10-pc/dp1/ETABS/REF/0520154gal_2.$2k
+10-pc/dp1/ETABS/REF/0520154gal_2.K~0
+10-pc/dp1/ETABS/REF/0520154gal_2.K~E
+10-pc/dp1/ETABS/REF/0520154gal_2.K~G
+10-pc/dp1/ETABS/REF/0520154gal_2.K~I
+10-pc/dp1/ETABS/REF/0520154gal_2.K~J
+10-pc/dp1/ETABS/REF/0520154gal_2.K~L
+10-pc/dp1/ETABS/REF/0520154gal_2.K~M
+10-pc/dp1/ETABS/REF/0520154gal_2.Y
+10-pc/dp1/ETABS/REF/0520154gal_2.Y$$
+10-pc/dp1/ETABS/REF/0520154gal_2.Y00
+10-pc/dp1/ETABS/REF/0520154gal_2.Y01
+10-pc/dp1/ETABS/REF/0520154gal_2.Y02
+10-pc/dp1/ETABS/REF/0520154gal_2.Y03
+10-pc/dp1/ETABS/REF/0520154gal_2.Y04
+10-pc/dp1/ETABS/REF/0520154gal_2.Y05
+10-pc/dp1/ETABS/REF/0520154gal_2.Y06
+10-pc/dp1/ETABS/REF/0520154gal_2.Y07
+10-pc/dp1/ETABS/REF/0520154gal_2.Y08
+10-pc/dp1/ETABS/REF/0520154gal_2.Y09
+10-pc/dp1/ETABS/REF/0520154gal_2.Y0A
+10-pc/dp1/ETABS/REF/0520154gal_2.Y0C
+10-pc/dp1/ETABS/REF/0520154gal_2.Y0D
+10-pc/dp1/ETABS/REF/0520154gal_2.Y0E
+10-pc/dp1/ETABS/REF/0520154gal_2.Y0F
+10-pc/dp1/ETABS/REF/0520154gal_2.Y~
+10-pc/dp1/ETABS/REF/0520154gal_2.Y~1
+10-pc/dp1/ETABS/REF/0520154gal_2.sbk
+10-pc/dp1/ETABS/REF/0520154gal_2.sdb
