--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,9 +41,12 @@
     "nargin",
     "setdiff",
     "strcmp",
+    "tonf",
     "undeformed",
     "unittest",
     "xlabel",
+    "xlsread",
+    "xlsx",
     "ylabel"
   ]
 }
