--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,5 +53,5 @@
     "ylabel"
   ],
   "python.pythonPath": "C:\\Users\\skyran\\Anaconda3\\python.exe",
-  "python.terminal.activateEnvironment": false
+  "search.useLegacySearch": true
 }
